# auto-zcurve

./: .gitignore  README.md  pyproject.toml
R/: report.R  schema.R  utils.R
auto_zcurve/: __init__.py  artifacts.py  cli.py  config.py  console.py  credentials.py  env.py  gemini.py  models.py  paths.py  preflight.py  prompts.py  report.py  runner.py  schema.py  tui.py  user_facing.py
config/: statistic_extraction_instructions.md
report/: report_template.qmd
scripts/: preflight.R
tests/: test_artifacts.py  test_credentials.py  test_gemini_response.py  test_models.py  test_report.py  test_schema.py  test_tui_helpers.py
